--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "redux-devtools-extension": "^2.13.9"
   },
   "dependencies": {
     "axios": "^0.18.1",
@@ -30,6 +31,8 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.5"
+    "mongoose": "^5.12.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
