--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
+    "react-redux": "^7.2.3",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
