--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^7.2.3",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.6.0"
   }
 }
