--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^1.18.7",
     "redux-devtools-extension": "^2.13.9"
   },
@@ -32,7 +33,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native": "^0.64.0",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
