--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3001",
   "name": "project-3",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "mdbreact": "^5.0.2",
     "react": "^17.0.2",
@@ -15,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
+    "react-validation": "^3.0.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
