--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
-    "validator": "^13.6.0",
     "mongoose": "^5.3.16",
     "react-datepicker": "^3.8.0",
-    "react-native-tailwindcss": "^1.1.11"
+    "react-native-tailwindcss": "^1.1.11",
+    "react-validation": "^3.0.7",
+    "validator": "^13.6.0"
   },
   "repository": {
     "type": "git",
